tests/fixtures/invalid/int_lshift_float.py
# Test int left shift with float (should fail)
x: int = 5
y: float = 2.0
result: int = x << y
